# realsense-multicam

./: .gitignore  README.md  mypy.ini  pyproject.toml
multicam/: __main__.py  app.py  camera.py  camera_frame_consumer.py  camera_frame_producer.py  config.py  data.py  data_contract.py  utils.py  viewer.py
