[tool.poetry]
name = "multicam"
version = "0.1.0"
description = "Pulling frames from multiple realsense camera, parallelly"
authors = ["Fahad Mirza <fahadmirza8@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"
repository = "https://github.com/mirzafahad/realsense-multicam.git"
keywords = ["core", "edge", "qco", "frictionless"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11.8"
pydantic = "^2.11.3"
numpydantic = "^1.6.8"
opencv-python = "^4.11.0.86"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
